Version 13.0.0 SOCommon version 5.0.4 SOComponents version 12.0.5 SOCharts version 4.0.0 Vaadin version 24.6.5
Note: This version onward requires Java 21 or higher versions.

Remove GoogleMap and MultiContentGenerator; add OAuth implementation.

The GoogleMap and MultiContentGenerator classes were removed as part of cleanup or deprecation. A new OAuth implementation was added, introducing initial methods and structures for handling OAuth functionality in a more uniform way.